Added command to create project in an opened folder
This command allows the user to create a new project. If no folder
is opened, the command won't even show up in the command pallette.
Otherwise, the user is guided through the creation process (which
folder to create project in; whether all *.vhd files shall be added).

--- a/vscode-client/package.json
+++ b/vscode-client/package.json
@@ -17,7 +17,8 @@
 		"vhdl"
 	],
 	"activationEvents": [
-		"onLanguage:vhdl"
+		"onLanguage:vhdl",
+		"onCommand:ghdl-ls.createproject"
 	],
 	"main": "./extension",
 	"contributes": {
@@ -76,6 +77,11 @@
 			{
 				"command": "ghdl-ls.shownode",
 				"title": "Show node info"
+			},
+			{
+				"command": "ghdl-ls.createproject",
+				"title": "Create project",
+				"category": "VHDL"
 			}
 		],
 		"menus": {
@@ -83,6 +89,12 @@
 				{
 					"command": "ghdl-ls.shownode",
 					"when": "editorTextFocus && resourceLangId == vhdl"
+				}
+			],
+			"commandPalette": [
+				{
+					"command": "ghdl-ls.createproject",
+					"when": "workspaceFolderCount >= 1"
 				}
 			]
 		},
